--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/validator": "^10.11.3",
     "apollo-server-express": "^2.9.4",
     "bcrypt": "^3.0.6",
+    "dataloader": "^1.4.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
