--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.5",
+    "jsonwebtoken": "^8.5.1",
     "mem": "^5.1.1",
     "merge-graphql-schemas": "^1.7.0",
     "morgan": "^1.9.1",
@@ -29,17 +30,17 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.8.0",
+    "@graphql-codegen/typescript": "^1.8.0",
     "@graphql-codegen/typescript-resolvers": "^1.8.0",
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.27",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
+    "@types/jsonwebtoken": "^8.3.4",
     "@types/morgan": "^1.7.37",
-    "@types/node": "^12.7.11",
     "@types/uuid": "^3.4.5",
     "@types/validator": "^10.11.3",
-    "@graphql-codegen/cli": "^1.8.0",
-    "@graphql-codegen/typescript": "^1.8.0",
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "@typescript-eslint/parser": "^2.3.2",
     "eslint": "^6.5.1",
@@ -50,6 +51,6 @@
     "eslint-plugin-react": "^7.15.1",
     "eslint-plugin-react-hooks": "^2.1.1",
     "ts-node-dev": "^1.0.0-pre.43",
-    "typescript": "^3.6.3"
+    "typescript": "^3.7.0-beta"
   }
 }
