--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "@types/jest": "25.1.2",
-    "@types/node": "13.7.1",
-    "@types/react": "16.9.19",
-    "@types/react-dom": "16.9.5",
     "apollo-boost": "^0.4.7",
+    "emotion-theming": "^10.0.27",
     "graphql": "^14.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.19",
-    "react-scripts": "3.3.1",
+    "react-scripts": "3.3.1"
+  },
+  "devDependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@chakra-ui/core": "^0.5.2",
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
+    "@types/jest": "25.1.2",
+    "@types/node": "13.7.1",
+    "@types/react": "16.9.19",
+    "@types/react-dom": "16.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
     "typescript": "3.7.5"
   },
   "scripts": {
