--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "collab",
   "version": "1.0.0",
   "description": "",
-  "main": ".eslintrc.js",
+  "private": true,
   "scripts": {
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
