--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.2",
+    "@material-ui/icons": "^4.9.1",
     "apollo-boost": "^0.4.7",
     "emotion-theming": "^10.0.27",
     "graphql": "^14.6.0",
@@ -13,9 +15,6 @@
   },
   "devDependencies": {
     "@apollo/react-hooks": "^3.1.3",
-    "@chakra-ui/core": "^0.5.2",
-    "@emotion/core": "^10.0.27",
-    "@emotion/styled": "^10.0.27",
     "@types/jest": "25.1.2",
     "@types/node": "13.7.1",
     "@types/react": "16.9.19",
@@ -24,6 +23,7 @@
     "@typescript-eslint/parser": "^2.19.2",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "typescript": "3.7.5"
   },
   "scripts": {
