--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.2",
-    "@material-ui/icons": "^4.9.1",
     "apollo-boost": "^0.4.7",
-    "emotion-theming": "^10.0.27",
     "graphql": "^14.6.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.19",
-    "react-scripts": "3.3.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.1",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -19,6 +19,8 @@
     "@types/node": "13.7.1",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^4.4.3",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "eslint": "^6.8.0",
