--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "apollo-boost": "^0.4.7",
     "graphql": "^14.6.0",
     "normalize.css": "^8.0.1",
+    "polished": "^3.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.19",
