--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "client": "cd client && npm start",
     "server": "ts-node-dev --no-notify --watch 'src/**/**.ts' --respawn src/server.ts",
     "dev": "concurrently \"npm run server\" \"npm run generate\"",
-    "generate": "graphql-codegen",
+    "generate": "graphql-codegen --watch",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "coverage": "jest --coverage",
@@ -40,6 +40,8 @@
     "@babel/preset-typescript": "^7.8.3",
     "@graphql-codegen/cli": "^1.12.2",
     "@graphql-codegen/typescript": "^1.12.2",
+    "@graphql-codegen/typescript-operations": "^1.12.2",
+    "@graphql-codegen/typescript-react-apollo": "^1.12.2",
     "@graphql-codegen/typescript-resolvers": "^1.12.2",
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.29",
