--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.149",
     "apollo-server-express": "^2.10.0",
     "bcrypt": "^3.0.8",
     "dataloader": "^2.0.0",
@@ -26,6 +27,7 @@
     "graphql": "^14.6.0",
     "graphql-tools": "^4.0.6",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mem": "^6.0.1",
     "merge-graphql-schemas": "^1.7.6",
     "pg": "^7.18.1",
