--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "typescript.tsdk": "./server/node_modules/typescript/lib",
   "editor.formatOnSave": true,
   "eslint.workingDirectories": ["./client", "./server"],
   "eslint.enable": true
