--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.6.0",
+    "graphql-middleware": "^4.0.2",
+    "graphql-shield": "^7.0.14",
     "graphql-tools": "^4.0.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
@@ -63,7 +65,7 @@
     "ts-jest": "^25.2.0",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.3"
   },
   "proxy": "http://localhost:5555"
 }
