--- a/client/package.json
+++ b/client/package.json
@@ -3,31 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@chakra-ui/core": "^0.6.1",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "@material-ui/icons": "^4.9.1",
     "apollo-boost": "^0.4.7",
+    "emotion-theming": "^10.0.27",
     "graphql": "^14.6.0",
     "normalize.css": "^8.0.1",
     "polished": "^3.4.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-hot-loader": "^4.12.19",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "3.4.0",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "@types/jest": "25.1.2",
-    "@types/node": "13.7.1",
-    "@types/react": "16.9.19",
+    "@types/jest": "25.1.4",
+    "@types/node": "13.9.0",
+    "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "^5.1.3",
-    "@types/styled-components": "^4.4.3",
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "^2.19.2",
+    "@types/styled-components": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "typescript": "3.7.5"
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "typescript": "3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
