--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "apollo-server-express": "^2.10.0",
     "bcrypt": "^3.0.8",
     "dataloader": "^2.0.0",
+    "date-fns": "^2.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.6.0",
