--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-hot-loader": "^4.12.19",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-select": "^3.0.8",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-select": "^3.0.11",
     "@types/styled-components": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.22.0",
