--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^10.0.27",
     "@material-ui/icons": "^4.9.1",
     "apollo-boost": "^0.4.7",
+    "emoji-mart": "^3.0.0",
     "emotion-theming": "^10.0.27",
     "graphql": "^14.6.0",
     "normalize.css": "^8.0.1",
@@ -22,6 +23,7 @@
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
+    "@types/emoji-mart": "^2.11.3",
     "@types/jest": "25.1.4",
     "@types/node": "13.9.0",
     "@types/react": "16.9.23",
