--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "normalize.css": "^8.0.1",
     "polished": "^3.4.4",
     "react": "^16.13.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.0",
     "react-hot-loader": "^4.12.19",
     "react-router-dom": "^5.1.2",
@@ -27,6 +28,7 @@
     "@types/jest": "25.1.4",
     "@types/node": "13.9.0",
     "@types/react": "16.9.23",
+    "@types/react-beautiful-dnd": "^12.1.2",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.11",
