--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/core": "^0.6.1",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
     "apollo-boost": "^0.4.7",
     "emoji-mart": "^3.0.0",
