--- a/client/package.json
+++ b/client/package.json
@@ -5,24 +5,33 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@chakra-ui/core": "^0.6.1",
+    "@craco/craco": "^5.6.4",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
+    "@reduxjs/toolkit": "^1.3.4",
     "apollo-boost": "^0.4.7",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-ws": "^1.0.20",
     "emoji-mart": "^3.0.0",
     "emotion-theming": "^10.0.27",
+    "framer-motion": "^1.10.3",
     "graphql": "^14.6.0",
+    "immer": "^6.0.3",
     "normalize.css": "^8.0.1",
     "polished": "^3.4.4",
     "react": "^16.13.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.0",
     "react-hot-loader": "^4.12.19",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-select": "^3.0.8",
-    "styled-components": "^5.0.1"
+    "simplebar-react": "^2.1.0",
+    "styled-components": "^5.0.1",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
     "@types/emoji-mart": "^2.11.3",
@@ -31,20 +40,17 @@
     "@types/react": "16.9.23",
     "@types/react-beautiful-dnd": "^12.1.2",
     "@types/react-dom": "16.9.5",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.11",
     "@types/styled-components": "^5.0.1",
-    "@typescript-eslint/eslint-plugin": "^2.22.0",
-    "@typescript-eslint/parser": "^2.22.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
+    "babel-plugin-emotion": "^10.0.33",
     "typescript": "3.8.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "cracobuild",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "browserslist": {
