--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/lodash": "^4.14.149",
     "apollo-server-express": "^2.11.0",
     "bcrypt": "^4.0.1",
     "dataloader": "^2.0.0",
@@ -29,6 +28,7 @@
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.2.1",
     "graphql-tools": "^4.0.7",
+    "ioredis": "^4.16.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mem": "^6.0.1",
@@ -52,8 +52,10 @@
     "@types/bluebird": "^3.5.30",
     "@types/express": "^4.17.3",
     "@types/faker": "^4.1.11",
+    "@types/ioredis": "^4.14.9",
     "@types/jest": "^25.1.4",
     "@types/jsonwebtoken": "^8.3.8",
+    "@types/lodash": "^4.14.149",
     "@types/uuid": "^7.0.2",
     "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
