--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,13 @@
     "apollo-boost": "^0.4.7",
     "apollo-link-context": "^1.0.20",
     "apollo-link-ws": "^1.0.20",
+    "cypress": "^4.4.1",
     "emoji-mart": "^3.0.0",
     "emotion-theming": "^10.0.27",
     "framer-motion": "^1.10.3",
     "graphql": "^14.6.0",
     "immer": "^6.0.3",
-    "normalize.css": "^8.0.1",
+    "lodash-es": "^4.17.15",
     "polished": "^3.4.4",
     "react": "^16.13.0",
     "react-beautiful-dnd": "^13.0.0",
@@ -29,13 +30,16 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-select": "^3.0.8",
+    "react-window": "^1.8.5",
     "simplebar-react": "^2.1.0",
     "styled-components": "^5.0.1",
     "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^2.6.1",
     "@types/emoji-mart": "^2.11.3",
     "@types/jest": "25.1.4",
+    "@types/lodash-es": "^4.17.3",
     "@types/node": "13.9.0",
     "@types/react": "16.9.23",
     "@types/react-beautiful-dnd": "^12.1.2",
@@ -43,6 +47,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.11",
+    "@types/react-window": "^1.8.2",
     "@types/styled-components": "^5.0.1",
     "babel-plugin-emotion": "^10.0.33",
     "typescript": "3.8.3"
@@ -51,7 +56,8 @@
     "start": "craco start",
     "build": "cracobuild",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "browserslist": {
     "production": [
