--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "apollo-link-context": "^1.0.20",
     "apollo-link-ws": "^1.0.20",
     "cypress": "^4.4.1",
+    "date-fns": "^2.12.0",
     "emoji-mart": "^3.0.0",
     "emotion-theming": "^10.0.27",
     "framer-motion": "^1.10.3",
@@ -32,7 +33,6 @@
     "react-select": "^3.0.8",
     "react-window": "^1.8.5",
     "simplebar-react": "^2.1.0",
-    "styled-components": "^5.0.1",
     "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
@@ -50,12 +50,14 @@
     "@types/react-window": "^1.8.2",
     "@types/styled-components": "^5.0.1",
     "babel-plugin-emotion": "^10.0.33",
+    "source-map-explorer": "^2.4.2",
     "typescript": "3.8.3"
   },
   "scripts": {
     "start": "craco start",
-    "build": "cracobuild",
+    "build": "craco build",
     "test": "craco test",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "eject": "react-scripts eject",
     "cypress:open": "cypress open"
   },
