--- a/client/package.json
+++ b/client/package.json
@@ -7,49 +7,51 @@
     "@chakra-ui/core": "^0.7.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@material-ui/core": "^4.9.12",
+    "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
-    "@reduxjs/toolkit": "^1.3.5",
-    "apollo-boost": "^0.4.7",
+    "@reduxjs/toolkit": "^1.3.6",
+    "apollo-boost": "^0.4.8",
     "apollo-link-context": "^1.0.20",
     "apollo-link-ws": "^1.0.20",
     "cypress": "^4.5.0",
-    "date-fns": "^2.12.0",
+    "date-fns": "^2.13.0",
     "emoji-mart": "^3.0.0",
     "emotion-theming": "^10.0.27",
     "framer-motion": "^1.10.3",
     "graphql": "^15.0.0",
-    "immer": "^6.0.3",
+    "immer": "^6.0.5",
     "lodash-es": "^4.17.15",
+    "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "react-window": "^1.8.5",
-    "simplebar-react": "^2.1.0",
+    "simplebar-react": "^2.2.0",
     "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
     "@craco/craco": "^5.6.4",
     "@types/body-scroll-lock": "^2.6.1",
-    "@types/emoji-mart": "^2.11.3",
+    "@types/emoji-mart": "^3.0.0",
     "@types/jest": "25.2.1",
     "@types/lodash-es": "^4.17.3",
-    "@types/node": "13.13.4",
-    "@types/react": "16.9.34",
+    "@types/node": "14.0.1",
+    "@types/qs": "^6.9.2",
+    "@types/react": "16.9.35",
     "@types/react-beautiful-dnd": "^12.1.2",
-    "@types/react-dom": "16.9.7",
-    "@types/react-redux": "^7.1.7",
+    "@types/react-dom": "16.9.8",
+    "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.12",
     "@types/react-window": "^1.8.2",
     "babel-plugin-emotion": "^10.0.33",
     "source-map-explorer": "^2.4.2",
-    "typescript": "3.8.3"
+    "typescript": "^3.9.2"
   },
   "scripts": {
     "start": "craco start",
