--- a/client/package.json
+++ b/client/package.json
@@ -49,7 +49,10 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.12",
     "@types/react-window": "^1.8.2",
+    "@typescript-eslint/parser": "^2.33.0",
     "babel-plugin-emotion": "^10.0.33",
+    "eslint": "^6.6.0",
+    "eslint-plugin-testing-library": "^3.1.2",
     "source-map-explorer": "^2.4.2",
     "typescript": "^3.9.2"
   },
