--- a/server/codegen.yml
+++ b/server/codegen.yml
@@ -2,12 +2,14 @@ schema: ./src/graphql/typeDefs/*.ts
 documents:
   - '../client/src/graphql/queries.ts'
   - '../client/src/graphql/mutations.ts'
+  - '../client/src/graphql/subscriptions.ts'
 watch: true
 require: ts-node/register/transpile-only
 generates:
   ./src/graphql/types.d.ts:
     plugins:
       - typescript
+      - typescript-operations
       - typescript-resolvers:
     config:
       mappers:
