--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "apollo-boost": "^0.4.8",
     "apollo-link-context": "^1.0.20",
     "apollo-link-ws": "^1.0.20",
+    "apollo-upload-client": "^13.0.0",
     "cypress": "^4.5.0",
     "date-fns": "^2.13.0",
     "emoji-mart": "^3.0.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^5.6.4",
+    "@types/apollo-upload-client": "^8.1.3",
     "@types/body-scroll-lock": "^2.6.1",
     "@types/emoji-mart": "^3.0.0",
     "@types/jest": "25.2.1",
