--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,6 @@
     "apollo-link-context": "^1.0.20",
     "apollo-link-ws": "^1.0.20",
     "apollo-upload-client": "^13.0.0",
-    "cypress": "^4.5.0",
     "date-fns": "^2.13.0",
     "emoji-mart": "^3.0.0",
     "emotion-theming": "^10.0.27",
@@ -36,7 +35,6 @@
     "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
-    "@craco/craco": "^5.6.4",
     "@types/apollo-upload-client": "^8.1.3",
     "@types/body-scroll-lock": "^2.6.1",
     "@types/emoji-mart": "^3.0.0",
@@ -59,9 +57,9 @@
     "typescript": "^3.9.2"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "eject": "react-scripts eject",
     "cypress:open": "cypress open"
