--- a/server/src/db/config/config.json
+++ b/server/src/db/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "root",
+    "username": "postgres",
     "password": "",
     "database": "collab_dev",
     "host": "127.0.0.1",
@@ -8,7 +8,7 @@
     "logging": false
   },
   "test": {
-    "username": "root",
+    "username": "postgres",
     "password": "",
     "database": "collab_test",
     "host": "127.0.0.1",
@@ -16,7 +16,7 @@
     "logging": false
   },
   "production": {
-    "username": "root",
+    "username": "postgres",
     "password": "",
     "database": "collab",
     "host": "127.0.0.1",
