--- a/server/src/db/config/config.json
+++ b/server/src/db/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "",
+    "password": "postgres",
     "database": "collab_dev",
     "host": "127.0.0.1",
     "dialect": "postgres",
@@ -9,7 +9,7 @@
   },
   "test": {
     "username": "postgres",
-    "password": "",
+    "password": "postgres",
     "database": "collab_test",
     "host": "127.0.0.1",
     "dialect": "postgres",
