--- a/server/src/db/config/config.json
+++ b/server/src/db/config/config.json
@@ -17,7 +17,7 @@
   },
   "production": {
     "username": "postgres",
-    "password": "poatgres",
+    "password": "postgres",
     "database": "collab",
     "host": "127.0.0.1",
     "dialect": "postgres",
