--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.3.2",
     "graphql-tools": "^6.0.14",
+    "helmet": "^3.23.3",
     "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
@@ -40,6 +41,7 @@
     "@types/bluebird": "^3.5.32",
     "@types/express": "^4.17.7",
     "@types/faker": "^4.1.12",
+    "@types/helmet": "0.0.47",
     "@types/ioredis": "^4.17.2",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.157",
