--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
+    "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
@@ -46,6 +47,7 @@
     "@types/react": "16.9.35",
     "@types/react-beautiful-dnd": "^12.1.2",
     "@types/react-dom": "16.9.8",
+    "@types/react-helmet": "^6.0.0",
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.12",
