--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "../dist",
-    "rootDir": "src",
+    "rootDir": "./src",
+    "skipLibCheck": true,
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
