--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
+    "react-easy-crop": "^3.1.1",
     "react-ga": "^3.1.2",
     "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.12.21",
@@ -56,6 +57,7 @@
     "babel-plugin-emotion": "^10.0.33",
     "concurrently": "^5.2.0",
     "eslint": "^6.6.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-testing-library": "^3.1.2",
     "source-map-explorer": "^2.4.2",
     "typescript": "^3.9.2"
